--- a/galeryPage.html
+++ b/galeryPage.html
@@ -21,10 +21,10 @@
             font-size: 2.8rem;
             color: #333;
         }
-
         .gallery-img {
             width: 100%;
-            height: 250px;
+            height: 100%;
+
             object-fit: cover;
             border-radius: 10px;
             border: 3px solid white;
@@ -41,7 +41,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="index.html">Labino Boats</a>
+        <a class="navbar-brand" href="index.html"><img src="labinologo.png" alt="Labino Boats Logo" height="50">Labino Boats</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -63,58 +63,82 @@
 <div class="container" style="padding-bottom: 50px">
     <div class="row g-4">
         <div class="col-md-4 col-sm-6">
-            <img src="images/viber_image_2025-04-22_16-19-20-591.jpg" class="gallery-img" alt="Gallery Image 1">
+            <img src="images/1.jpg" class="gallery-img" alt="Gallery Image 1">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/viber_image_2025-04-22_16-19-21-012.jpg" class="gallery-img" alt="Gallery Image 2">
+            <img src="images/2.jpg" class="gallery-img" alt="Gallery Image 2">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/viber_image_2025-04-22_16-19-21-363.jpg" class="gallery-img" alt="Gallery Image 3">
+            <img src="images/3.jpg" class="gallery-img" alt="Gallery Image 3">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/viber_image_2025-04-22_16-19-22-035.jpg" class="gallery-img" alt="Gallery Image 4">
+            <img src="images/4.jpg" class="gallery-img" alt="Gallery Image 4">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/unnamed.jpg" class="gallery-img" alt="Gallery Image 5">
+            <img src="images/5.5.jpg" class="gallery-img" alt="Gallery Image 5">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
+            <img src="images/5.jpg" class="gallery-img" alt="Gallery Image 6">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/viber_image_2025-04-22_16-19-22-319.jpg" class="gallery-img" alt="Gallery Image 2">
+            <img src="images/6.jpg" class="gallery-img" alt="Gallery Image 2">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/viber_image_2025-04-22_16-19-22-752.jpg" class="gallery-img" alt="Gallery Image 2">
+            <img src="images/7.jpg" class="gallery-img" alt="Gallery Image 2">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/viber_image_2025-04-22_16-19-22-752.jpg" class="gallery-img" alt="Gallery Image 6">
+            <img src="images/8.jpg" class="gallery-img" alt="Gallery Image 6">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/viber_image_2025-04-22_16-19-23-005.jpg" class="gallery-img" alt="Gallery Image 6">
+            <img src="images/9.jpg" class="gallery-img" alt="Gallery Image 6">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/viber_image_2025-04-22_16-19-23-429.jpg" class="gallery-img" alt="Gallery Image 6">
+            <img src="images/11.jpg" class="gallery-img" alt="Gallery Image 6">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
+            <img src="images/12.jpg" class="gallery-img" alt="Gallery Image 6">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
+            <img src="images/13.jpg" class="gallery-img" alt="Gallery Image 6">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
+            <img src="images/14.jpg" class="gallery-img" alt="Gallery Image 6">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
+            <img src="images/15.jpg" class="gallery-img" alt="Gallery Image 6">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
+            <img src="images/16.jpg" class="gallery-img" alt="Gallery Image 6">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
+            <img src="images/17.jpg" class="gallery-img" alt="Gallery Image 6">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
+            <img src="images/18.jpg" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/19.jpg" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/20.jpg" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/21.jpg" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/image0.jpeg" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/image1.jpeg" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/image2.jpeg" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/image3.jpeg" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/image4.jpeg" class="gallery-img" alt="Gallery Image 6">
         </div>
 
 
