--- a/toursPage.html
+++ b/toursPage.html
@@ -78,7 +78,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="index.html">Labino Boats</a>
+        <a class="navbar-brand" href="index.html"><img src="labinologo.png" alt="Labino Boats Logo" height="50">Labino Boats</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -118,7 +118,7 @@
             </div>
             <div class="col-md-4">
                 <div class="info-label">Group Size</div>
-                <div class="info-value">Max 12 people</div>
+                <div class="info-value">Max 11 people</div>
             </div>
         </div>
 
@@ -182,7 +182,7 @@
             </div>
             <div class="col-md-4">
                 <div class="info-label">Group Size</div>
-                <div class="info-value">Max 12 people</div>
+                <div class="info-value">Max 11 people</div>
             </div>
         </div>
 
@@ -224,12 +224,18 @@
     <div class="tour-card">
         <h4 class="fw-bold mb-3">Full-Day Adventure</h4>
         <img src="images/sveti-naum-ohridski.jpg" alt="City Explorer" class="tour-img mb-3" />
+        <p>
+            Discover the beauty of Ohrid from a unique perspective aboard a relaxing catamaran tour. The journey begins at the Ohrid Harbor, taking you along the shoreline with panoramic views of the city's most iconic landmarks.
+        </p>
+        <p>
+            You’ll cruise past the Old Town, known for its charming stone houses, narrow streets, and rich cultural heritage. The tour continues with a breathtaking view of the Church of St. John at Kaneo, beautifully situated on a cliff above the lake.
+        </p>
+        <p>
+            Next, glide by Labino Beach, a peaceful and scenic spot perfect for enjoying the natural beauty of the lakeside. The route also includes a view of Villa "Biljana", the official residence used for hosting dignitaries, nestled among greenery above the lake.
+        </p>
 
         <p class="text-muted">
-            The catamaran tour starts from the Ohrid Harbor, offering a scenic and relaxing ride along the eastern shore of Lake Ohrid.
-        </p>
-        <p class="text-muted">
-            The first landmark you pass is the Tito’s Villa, a historical residence hidden among greenery. Shortly after, the tour continues past the lakeside village of Peštani, known for its traditional houses and peaceful atmosphere.
+            From there, the catamaran ride continues along the eastern shore of Lake Ohrid, offering a scenic and relaxing experience. Shortly after, the tour passes by the lakeside village of Peštani, known for its traditional houses and peaceful atmosphere.
         </p>
         <p class="text-muted">
             The first stop is at the Bay of Bones – Gradishte, an archaeological site and open-air museum built on the water, where you'll have a 30-minute break to explore.
@@ -258,7 +264,7 @@
             </div>
             <div class="col-md-4">
                 <div class="info-label">Group Size</div>
-                <div class="info-value">Max 12 people</div>
+                <div class="info-value">Max 11 people</div>
             </div>
         </div>
 
@@ -321,7 +327,7 @@
             </div>
             <div class="col-md-4">
                 <div class="info-label">Group Size</div>
-                <div class="info-value">Max 12 people</div>
+                <div class="info-value">Max 11 people</div>
             </div>
         </div>
         <div class="button-book mb-3">
