--- a/contactPage.html
+++ b/contactPage.html
@@ -97,7 +97,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light" >
     <div class="container">
-        <a class="navbar-brand" href="index.html">Labino Boats</a>
+        <a class="navbar-brand" href="index.html"><img src="labinologo.png" alt="Labino Boats Logo" height="50">Labino Boats</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
