--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="carousel-inner">
                 <!-- Image 1 -->
                 <div class="carousel-item active">
-                    <img src="images/1.jpg" class="d-block carousel-img" alt="Gallery Image 1">
+                    <img src="images/1.jpg" class="d-block carousel-img" alt="Ohrid Boat">
                 </div>
                 <!-- Image 2 -->
                 <div class="carousel-item">
