--- a/index.html
+++ b/index.html
@@ -274,31 +274,31 @@
         <div id="videoCarousel" class="carousel slide video-container" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <video controls>
+                    <video controls poster="templates/1.jpeg">>
                         <source src="videos/0-02-05-1cde83bd3262c05a07cfda88a4c0636437b2d55579db40c5ee3a4a9234b70535_8393acf7bd247a7c.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
                 <div class="carousel-item">
-                    <video controls class="d-block w-100">
+                    <video controls class="d-block w-100" controls poster="templates/2.jpeg">
                         <source src="videos/0-02-05-301fae94581ae089ffac8e7a0fad91a7684498183571f18a9cc9c8e0a2beb47d_af1b65856190a5d4.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
                 <div class="carousel-item">
-                    <video controls class="d-block w-100">
+                    <video controls class="d-block w-100" poster="templates/3.jpeg">
                         <source src="videos/0-02-05-570086f6790e798914247fbccff2f019759dfc1e98ce225474be9366b3a1e9f8_7ba0a192e58a06b.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
                 <div class="carousel-item">
-                    <video controls class="d-block w-100">
+                    <video controls class="d-block w-100" poster="templates/4.jpeg">
                         <source src="videos/0-02-05-4763684f607f181b148fd3759818c3c7d3d0e2c246a5c3727fd4ff410e915415_ad1484e89a09e643.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
                 <div class="carousel-item">
-                    <video controls class="d-block w-100">
+                    <video controls class="d-block w-100" poster="templates/5.jpeg">
                         <source src="videos/0-02-05-e476fce4349db28d3a17f77cc147d32f32a83ef558637cb9db5fc8c210111edc_9a14d4ef6b080a5a.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
