--- a/contactPage.html
+++ b/contactPage.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="icon" type="image/png" href="labinologo.png">
     <title>Contact Us - Labino Boats</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
     <script src="js/bootstrap.bundle.js"></script>
