--- a/contactPage.html
+++ b/contactPage.html
@@ -124,7 +124,7 @@
 
     <div class="contact-item">
         <i class="bi bi-envelope-fill"></i>
-        <span ><a href="mailto:labinoboats@gmail.com">labinoboats@gmail.com</a></span>
+        <span ><a href="mailto:dimitargjorgjijoskihotmail11@gmail.com">dimitargjorgjijoskihotmail11@gmail.com</a></span>
     </div>
 
     <div class="contact-item">
