--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="VmoLhTSowoQw5ksPxG3xtUci2hMaJakqx3RMy6qwjOw" />
     <link rel="icon" type="image/png" href="labinologo.png">
     <title>Labino Boats</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
