--- a/toursPage.html
+++ b/toursPage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" href="labinologo.png">
+    <meta name="google-site-verification" content="VmoLhTSowoQw5ksPxG3xtUci2hMaJakqx3RMy6qwjOw" />
     <title>Our Tours</title>
     <style>
         body {
