--- a/contactPage.html
+++ b/contactPage.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="google-site-verification" content="9ia9QLdzLAjz0xZey73gsuowbn9v3GBxU7uvOj2AClY" />
+    <meta name="description" content="Ohrid boats">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="icon" type="image/png" href="labinologo.png">
     <title>Contact Us - Labino Boats</title>
@@ -124,7 +125,7 @@
 
     <div class="contact-item">
         <i class="bi bi-envelope-fill"></i>
-        <span ><a href="mailto:dimitargjorgjijoskihotmail11@gmail.com">dimitargjorgjijoskihotmail11@gmail.com</a></span>
+        <span ><a href="mailto:boatslabino@gmail.com">boatslabino@gmail.com</a></span>
     </div>
 
     <div class="contact-item">
