--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="9ia9QLdzLAjz0xZey73gsuowbn9v3GBxU7uvOj2AClY" />
     <link rel="icon" type="image/png" href="labinologo.png">
+    <link rel="canonical" href="https://labinoboats.com/"/>
     <title>Labino Boats</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
