--- a/contactPage.html
+++ b/contactPage.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Ohrid boats">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="icon" type="image/png" href="labinologo.png">
-    <title>Contact Us - Labino Boats</title>
+    <title>Contact Us - Labino Boats Ohrid</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
     <script src="js/bootstrap.bundle.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
