--- a/toursPage.html
+++ b/toursPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" href="labinologo.png">
     <meta name="google-site-verification" content="9ia9QLdzLAjz0xZey73gsuowbn9v3GBxU7uvOj2AClY" />
-    <title>Our Tours</title>
+    <title>Our Tours - Labino Boats Ohrid</title>
     <style>
         body {
             background: linear-gradient(to bottom, #2193b0, #6dd5ed);
