--- a/galeryPage.html
+++ b/galeryPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="icon" type="image/png" href="labinologo.png">
     <meta name="google-site-verification" content="9ia9QLdzLAjz0xZey73gsuowbn9v3GBxU7uvOj2AClY" />
-    <title>Gallery - Labino Boats</title>
+    <title>Gallery - Labino Boats, Ohrid</title>
     <script src="js/bootstrap.bundle.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
     <style>
