--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="google-site-verification" content="9ia9QLdzLAjz0xZey73gsuowbn9v3GBxU7uvOj2AClY" />
     <link rel="icon" type="image/png" href="labinologo.png">
     <link rel="canonical" href="https://labinoboats.com/"/>
+    <meta name="keywords" content="Labino Boats, ohrid boats,ohrid rental boats, boat rental">
     <title>Labino Boats, Ohrid</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
