--- a/contactPage.html
+++ b/contactPage.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Ohrid boats">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="icon" type="image/png" href="labinologo.png">
+    <meta name="keywords" content="Labino Boats, ohrid boats,ohrid rental boats, boat rental">
     <title>Contact Us - Labino Boats Ohrid</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
     <script src="js/bootstrap.bundle.js"></script>
